--- a/day-slot.html
+++ b/day-slot.html
@@ -39,10 +39,11 @@
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--first"><span>Игры</span>
 
 						<ul class="main-nav__dropdown">
-							<li class="main-nav__dropdown-item"><a href="#">NetEnt</a></li>
-							<li class="main-nav__dropdown-item"><a href="#">Amatic</a></li>
-							<li class="main-nav__dropdown-item"><a href="#">Ezugi</a></li>
-							<li class="main-nav__dropdown-item"><a href="#">Softswiss</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Лобби</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Слоты</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Джекпоты</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Настольные</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Live диллер</a></li>
 						</ul>
 					</li>
 
@@ -91,7 +92,7 @@
 
 					<div class="half-cashback__text-wrapper">
 						<h2 class="half-cashback__header">Возвращаем 50% проигранных средств</h2>
-						<p class="half-cashback__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+						<p class="half-cashback__text">Здесь вы увидите наше расписание и наименование слота в котором проходит акция.</p>
 					</div>
 
 					<div class="half-cashback__image"></div>
@@ -124,7 +125,7 @@
 					</div>
 					
 					<div class="half-cashback__article-wrapper">
-						<p class="half-cashback__article">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						<p class="half-cashback__article">Для участия в данной акции вы должны во вторник, после 01:00 внести минимальный депозит и вы автоматически становитесь участником акции! <br>В случае неудачи мы вам компенсируем 50% от проигрыша. Деньги поступят на счет в течении дня, в среду.</p>
 					</div>
 					
 					<div class="half-cashback__button-wrapper">
@@ -135,8 +136,8 @@
 
 			<div class="cashback-games">
 				<div class="cashback-games__wrapper">
-					<h2 class="cashback-games__header">Lorem ipsum dolor</h2>
-					<p class="cashback-games__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
+					<h2 class="cashback-games__header">Важно!</h2>
+					<p class="cashback-games__text">Вы становитесь участником данной акции, только после внесения депозита.</p>
 
 					<div class="cashback-game">
 						<div class="cashback-game__wrapper">
@@ -284,9 +285,10 @@
 					<div class="games__column">
 						<h2 class="games__header">О нас</h2>
 						<ul class="games__list">
+							<li class="games__item"><a href="#">Политика конфиденциальности</a></li>
 							<li class="games__item games__item--support">Поддержка</li>
 							<li class="games__item"><a href="partners.html">Партнерам</a></li>
-							<li class="games__item"><a href="about.html">О Dsrkslot</a></li>
+							<li class="games__item"><a href="about.html">О Darkslot</a></li>
 							<li class="games__item"><a href="blog.html">Блог</a></li>
 						</ul>
 					</div>
