--- a/free-spins.html
+++ b/free-spins.html
@@ -39,10 +39,11 @@
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--first"><span>Игры</span>
 
 						<ul class="main-nav__dropdown">
-							<li class="main-nav__dropdown-item"><a href="#">NetEnt</a></li>
-							<li class="main-nav__dropdown-item"><a href="#">Amatic</a></li>
-							<li class="main-nav__dropdown-item"><a href="#">Ezugi</a></li>
-							<li class="main-nav__dropdown-item"><a href="#">Softswiss</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Лобби</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Слоты</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Джекпоты</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Настольные</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Live диллер</a></li>
 						</ul>
 					</li>
 
@@ -89,8 +90,10 @@
 			<div class="free-spins__wrapper">
 				<div class="free-spins__header-wrapper">
 					<h2 class="free-spins__header">Бонусные фриспины по четвергам</h2>
-					<p class="free-spins__underheader-text">Сделайте депозит в четверг, введите промо-код полученный на почту и крутите любимые игры абсолютно бесплатно!</p>
+					<p class="free-spins__underheader-text">Внесите депозит от 20$ и получите бесплатные вращаения в игре Jack and the Beanstalk. Проведите четверг с DarkSlot и насладитесь атмосферой нашего казино. Так же не забывайте,  что для каждого игрока действует Reload bonus 50%, который можно получить один раз в любой день недели.</p>
 				</div>
+
+				<a href="#" class="free-spins__button">Правила и условия</a>
 
 				<div class="free-spins__coin-image-wrapper">
 					<img src="img/free-spins-coin.png" alt="free spins" class="free-spins__coin-image">
@@ -124,7 +127,7 @@
 				</div>
 
 				<div class="statistics__text-wrapper">
-					<p class="statistics__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<p class="statistics__text">Данное бонусное предложение доступно только для клиентов  "DARK SLOT".<br>Акция проводится по (День недели) с 01:00 до 23:59 (МСК).<br>Для  участия в акции, необходимо пополнить счет не менее чем на 20$, фри спины будут начислены на счет моментально.<br>Каждый игрок Darkslot может принять участие в акции только один раз на протяжении четверга.<br>Бонус доступен только для одного игрового счета, человека, семью, компьютер или IP-адрес. При подозрении о нарушениях путем множественных регистраций (поддельные счета) все бонусные средства и реальные будут аннулированы.<br>Принимая бонус, клиент соглашается с бонусными условиями, а также с общими правилами и положениями "DARK SLOT", опубликованными на сайте Darkslot.com .</p>
 				</div>
 			</div>
 		</section>
@@ -200,9 +203,10 @@
 					<div class="games__column">
 						<h2 class="games__header">О нас</h2>
 						<ul class="games__list">
+							<li class="games__item"><a href="#">Политика конфиденциальности</a></li>
 							<li class="games__item games__item--support">Поддержка</li>
 							<li class="games__item"><a href="partners.html">Партнерам</a></li>
-							<li class="games__item"><a href="about.html">О Dsrkslot</a></li>
+							<li class="games__item"><a href="about.html">О Darkslot</a></li>
 							<li class="games__item"><a href="blog.html">Блог</a></li>
 						</ul>
 					</div>
