--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--first"><span>Игры</span>
 
 						<ul class="main-nav__dropdown">
-							<li class="main-nav__dropdown-item"><a href="#">NetEnt</a></li>
-							<li class="main-nav__dropdown-item"><a href="#">Amatic</a></li>
-							<li class="main-nav__dropdown-item"><a href="#">Ezugi</a></li>
-							<li class="main-nav__dropdown-item"><a href="#">Softswiss</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Лобби</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Слоты</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Джекпоты</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Настольные</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Live диллер</a></li>
 						</ul>
 					</li>
 
@@ -436,8 +437,8 @@
 
 		<section class="deposites">
 			<div class="deposites__wrapper">
-				<h1 class="deposites__header">Заработай 45% с депозитов<br>вместе с Darkslot<br>и 1000$ сверху</h1>
-				<a href="partners.html" class="deposites__button">Узнать больше</a>
+				<h1 class="deposites__header">Заработай 45% + до 1000$ за каждый уровень! Уникальной партнерской программы!</h1>
+				<a href="partners.html" class="deposites__button">Стать партнером</a>
 
 				<div class="deposites__image-wrapper">
 					<img src="img/chest.png" alt="chest" class="deposites__image">
@@ -479,9 +480,10 @@
 					<div class="games__column">
 						<h2 class="games__header">О нас</h2>
 						<ul class="games__list">
+							<li class="games__item"><a href="#">Политика конфиденциальности</a></li>
 							<li class="games__item games__item--support">Поддержка</li>
 							<li class="games__item"><a href="partners.html">Партнерам</a></li>
-							<li class="games__item"><a href="about.html">О Dsrkslot</a></li>
+							<li class="games__item"><a href="about.html">О Darkslot</a></li>
 							<li class="games__item"><a href="blog.html">Блог</a></li>
 						</ul>
 					</div>
