--- a/partners.html
+++ b/partners.html
@@ -39,10 +39,11 @@
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--first"><span>Игры</span>
 
 						<ul class="main-nav__dropdown">
-							<li class="main-nav__dropdown-item"><a href="#">NetEnt</a></li>
-							<li class="main-nav__dropdown-item"><a href="#">Amatic</a></li>
-							<li class="main-nav__dropdown-item"><a href="#">Ezugi</a></li>
-							<li class="main-nav__dropdown-item"><a href="#">Softswiss</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Лобби</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Слоты</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Джекпоты</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Настольные</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Live диллер</a></li>
 						</ul>
 					</li>
 
@@ -193,9 +194,10 @@
 					<div class="games__column">
 						<h2 class="games__header">О нас</h2>
 						<ul class="games__list">
+							<li class="games__item"><a href="#">Политика конфиденциальности</a></li>
 							<li class="games__item games__item--support">Поддержка</li>
 							<li class="games__item"><a href="partners.html">Партнерам</a></li>
-							<li class="games__item"><a href="about.html">О Dsrkslot</a></li>
+							<li class="games__item"><a href="about.html">О Darkslot</a></li>
 							<li class="games__item"><a href="blog.html">Блог</a></li>
 						</ul>
 					</div>
