--- a/about.html
+++ b/about.html
@@ -40,10 +40,11 @@
 					<li class="main-nav__item main-nav__item--arrow main-nav__item--first"><span>Игры</span>
 
 						<ul class="main-nav__dropdown">
-							<li class="main-nav__dropdown-item"><a href="#">NetEnt</a></li>
-							<li class="main-nav__dropdown-item"><a href="#">Amatic</a></li>
-							<li class="main-nav__dropdown-item"><a href="#">Ezugi</a></li>
-							<li class="main-nav__dropdown-item"><a href="#">Softswiss</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Лобби</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Слоты</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Джекпоты</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Настольные</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Live диллер</a></li>
 						</ul>
 					</li>
 
@@ -133,6 +134,52 @@
 		<section class="slider slider--about">
 			<div class="slide">
 				<div class="slide__image-wrapper">
+					<img src="img/wood-bg.png" alt="slide" class="slide__image">
+				</div>
+
+				<div class="slide__content-wrapper">
+
+					<section class="registration registration--slide">
+						<div class="registration__wrapper">
+
+							<div class="registration-bonus">
+								<h3 class="registration-bonus__header">Зарегистрируйся и получи</h3>
+								<h3 class="registration-bonus__underheader">Приветственный бонус</h3>	
+								<span class="registration-bonus__count anim">1800$</span>
+							</div>
+
+							<div class="registration__character-wrapper">
+								<img src="img/tiger.png" alt="toger" class="registration__character">
+							</div>
+
+							<form action="#" class="registration-form-mini registration-form-mini--slide">
+								<input type="email" placeholder="Email" class="registration-form-mini__email">
+								<input type="text" placeholder="Никнейм" class="registration-form-mini__nickname">
+								<input type="password" placeholder="Пароль" class="registration-form-mini__password">
+								<input type="password" placeholder="Подтверждение пароля" class="registration-form-mini__password-confirm">
+								<select name="" id="bottom-reg-select" class="registration-form-mini__select">
+									<option value="currency" selected disabled>Валюта</option>
+									<option value="rub">Рубли</option>
+									<option value="euro">Евро</option>
+									<option value="dollar">Доллары</option>
+									<option value="btc">Биткоины</option>
+								</select>
+
+								<input type="checkbox" id="bottom-form-checkbox" class="registration-form-mini__checkbox">
+								<label for="bottom-form-checkbox" class="registration-form-mini__label-checkbox">Мне 18 лет и я принимаю Положения и условия</label>
+
+								<input type="submit" class="registration-form-mini__button" value="Регистрация">
+							</form>
+
+							<button class="registration__reg-button">Регистрация</button>
+
+						</div>
+					</section>
+				</div>
+			</div>
+
+			<div class="slide">
+				<div class="slide__image-wrapper">
 					<img src="img/slide-image-2.png" alt="slide" class="slide__image">
 				</div>
 
@@ -198,52 +245,6 @@
 
 			<div class="slide">
 				<div class="slide__image-wrapper">
-					<img src="img/wood-bg.png" alt="slide" class="slide__image">
-				</div>
-
-				<div class="slide__content-wrapper">
-
-					<section class="registration registration--slide">
-						<div class="registration__wrapper">
-
-							<div class="registration-bonus">
-								<h3 class="registration-bonus__header">Зарегистрируйся и получи</h3>
-								<h3 class="registration-bonus__underheader">Приветственный бонус</h3>	
-								<span class="registration-bonus__count">1800$</span>
-							</div>
-
-							<div class="registration__character-wrapper">
-								<img src="img/tiger.png" alt="toger" class="registration__character">
-							</div>
-
-							<form action="#" class="registration-form-mini registration-form-mini--slide">
-								<input type="email" placeholder="Email" class="registration-form-mini__email">
-								<input type="text" placeholder="Никнейм" class="registration-form-mini__nickname">
-								<input type="password" placeholder="Пароль" class="registration-form-mini__password">
-								<input type="password" placeholder="Подтверждение пароля" class="registration-form-mini__password-confirm">
-								<select name="" id="bottom-reg-select" class="registration-form-mini__select">
-									<option value="currency" selected disabled>Валюта</option>
-									<option value="rub">Рубли</option>
-									<option value="euro">Евро</option>
-									<option value="dollar">Доллары</option>
-									<option value="btc">Биткоины</option>
-								</select>
-
-								<input type="checkbox" id="bottom-form-checkbox" class="registration-form-mini__checkbox">
-								<label for="bottom-form-checkbox" class="registration-form-mini__label-checkbox">Мне 18 лет и я принимаю Положения и условия</label>
-
-								<input type="submit" class="registration-form-mini__button" value="Регистрация">
-							</form>
-
-							<button class="registration__reg-button">Регистрация</button>
-
-						</div>
-					</section>
-				</div>
-			</div>
-
-			<div class="slide">
-				<div class="slide__image-wrapper">
 					<a href="free-spins.html">
 						<img src="img/free-spins.png" alt="slide" class="slide__image">
 					</a>
@@ -289,9 +290,10 @@
 					<div class="games__column">
 						<h2 class="games__header">О нас</h2>
 						<ul class="games__list">
+							<li class="games__item"><a href="#">Политика конфиденциальности</a></li>
 							<li class="games__item games__item--support">Поддержка</li>
 							<li class="games__item"><a href="partners.html">Партнерам</a></li>
-							<li class="games__item"><a href="about.html">О Dsrkslot</a></li>
+							<li class="games__item"><a href="about.html">О Darkslot</a></li>
 							<li class="games__item"><a href="blog.html">Блог</a></li>
 						</ul>
 					</div>
@@ -486,19 +488,6 @@
 		</div>
 
 		<div class="modal__close"></div>
-	</section>"modal-contact">
-		<div class="modal-contact__character-wrapper">
-			<img src="img/tiger.png" alt="tiger" class="modal-contact__character">
-		</div>
-
-		<form action="#" class="contact-form">
-			<h2 class="contact-form__header">Форма контакта</h2>
-			<input type="email" class="contact-form__email" placeholder="Email">
-			<textarea name="textarea-contact" id="text-contact" cols="30" rows="10" class="contact-form__text-field" placeholder="Текст..."></textarea>
-			<input type="submit" class="contact-form__button" value="Отправить">
-		</form>
-
-		<div class="modal-contact__close"></div>
 	</section>
 
 	<div class="modal-bg"></div> 
