reload bonus page added

--- a/everyweek-cashback.html
+++ b/everyweek-cashback.html
@@ -51,7 +51,7 @@
 
 						<ul class="main-nav__dropdown">
 							<li class="main-nav__dropdown-item"><a href="bonus.html">Приветственный бонус</a></li>
-							<li class="main-nav__dropdown-item"><a href="#">Reload бонус</a></li>
+							<li class="main-nav__dropdown-item"><a href="reload-bonus.html">Reload бонус</a></li>
 							<li class="main-nav__dropdown-item"><a href="everyweek-cashback.html">100% кэшбек</a></li>
 							<li class="main-nav__dropdown-item"><a href="day-slot.html">Слот дня во вторник</a></li>
 							<li class="main-nav__dropdown-item"><a href="free-spins.html">Фриспины в четверг</a></li>
@@ -154,18 +154,18 @@
 		</section>
 
 
-		<section class="deposit-conditions">
-			<div class="deposit-conditions__wrapper">
-				<div class="deposit-condition">
-					<span class="deposit-condition__description">Каждому участнику после 23:00 (Мск) воскресенья будет вручён Тикет с номером на право участия в акции и выслан на почту</span>
+		<section class="conditions">
+			<div class="conditions__wrapper">
+				<div class="condition">
+					<span class="condition__description">Каждому участнику после 23:00 (Мск) воскресенья будет вручён Тикет с номером на право участия в акции и выслан на почту</span>
 				</div>
 
-				<div class="deposit-condition">
-					<span class="deposit-condition__description">Все средства полученные в данной акции подлежат отыгрышу x3 (1-е место без вейджера)</span>
+				<div class="condition">
+					<span class="condition__description">Все средства полученные в данной акции подлежат отыгрышу x3 (1-е место без вейджера)</span>
 				</div>
 
-				<div class="deposit-condition">
-					<span class="deposit-condition__description">Суммы компенсаций конфедециальны</span>
+				<div class="condition">
+					<span class="condition__description">Суммы компенсаций конфедециальны</span>
 				</div>
 			</div>
 		</section>
