--- a/reload-bonus.html
+++ b/reload-bonus.html
@@ -10,7 +10,6 @@
 	<link rel="stylesheet" href="css/slick.css">
 	<link rel="stylesheet" href="css/slick-theme.css">
 	<link rel="stylesheet" href="css/jquery.formstyler.css">
-	<link rel="stylesheet" href="css/animate.css">
 </head>
 <body>
 	
@@ -83,101 +82,60 @@
 
 	<div class="main-wrapper">
 
-		<section class="about">
-			<div class="about__wrapper">
-				<div class="about__text-wrapper">
-					<div class="about__header-wrapper">
-						<h1 class="about__header">Революция</h1>
-						<h2 class="about__underheader">В мире онлайн казино!</h2>
-					</div>
-
-					<p class="about__text">Что это значит? - Мы предоставляем нашим друзьям только лучшие условия, что бы каждый мог насладиться играми каждый день, в любой день и при любых обстоятельствах!</p>
+		<section class="reload-bonus">
+			<div class="reload-bonus__wrapper">
+				<h1 class="reload-bonus__header">50% reload bonus</h1>
+				<div class="reload-bonus__text-wrapper">
+					<p class="reload-bonus__text">Каждый пользователь имеет право один раз и в любой день недели обратится в службу поддержки и получить этот замечательный бонус, сумма которого зависит от вашего уровня</p>
 				</div>
 
-				<div class="about__dignity-wrapper">
-
-					<div class="dignity">
-						<div class="dignity__image content"></div>
-						<div class="dignity__text-wrapper">
-							<h3 class="dignity__header">Поддержка</h3>
-							<p class="dignity__text">В нашей команде работают самые опытные специалисты в мире онлайн гемблинга, любые ваши вопросы будут решены в режиме 24/7</p>
-						</div>
+				<div class="levels">
+					<div class="level">
+						<span class="level__up-text">до</span>
+						<span class="level__money-amount">50$</span>
+						<span class="level__description">1 уровень</span>
 					</div>
-
-					<div class="dignity">
-						<div class="dignity__image content"></div>
-						<div class="dignity__text-wrapper">
-						<h3 class="dignity__header">Доверие</h3>
-							<p class="dignity__text">Нам доверяют сотни игроков каждый день, благодаря лицензионным играм и нашей собственной лицензией предоставляемой...</p>
-						</div>
+					<div class="level">
+						<span class="level__up-text">до</span>
+						<span class="level__money-amount">100$</span>
+						<span class="level__description">2 уровень</span>
 					</div>
-
-					<div class="dignity">
-						<div class="dignity__image content"></div>
-						<div class="dignity__text-wrapper">
-							<h3 class="dignity__header">Молниеносные выплаты</h3>
-							<p class="dignity__text">Мы заботимся о том, что бы ваши победы стали реальными средствами меньше чем за час.</p>
-						</div>
+					<div class="level">
+						<span class="level__up-text">до</span>
+						<span class="level__money-amount">200$</span>
+						<span class="level__description">3 уровень</span>
 					</div>
+					<div class="level">
+						<span class="level__up-text">до</span>
+						<span class="level__money-amount">2000$</span>
+						<span class="level__description">Dark lord	</span>
+					</div>
+				</div>
+				
+				<div class="conditions conditions--reload">
+					<div class="conditions__wrapper">
+						<div class="conditions__header">Правила</div>
 
-					<div class="dignity">
-						<div class="dignity__image content"></div>
-						<div class="dignity__text-wrapper">
-							<h3 class="dignity__header">Акции и бонусы</h3>
-							<p class="dignity__text">Уюху! Море бонусов и акций: приветственный бонус за регистрацию; reload бонус 50% один раз в неделю, в любой день; фри спины по четвергам , Слот дня по вторникам; 100% cashback, розыгрыш в понедельник; турнир по пятницам!</p>
+						<div class="conditions__text-wrapper">
+							<div class="condition condition--reload">
+								<span class="condition__description">Бонус может быть отыгран только в слоты</span>
+							</div>
+							<div class="condition condition--reload">
+								<span class="condition__description">Одиночная ставка не должна превышать 5$</span>
+							</div>
+							<div class="condition condition--reload">
+								<span class="condition__description">Можно получить только один бонус в неделю</span>
+							</div>
+							<div class="condition condition--reload">
+								<span class="condition__description">Вейджер x40</span>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
 
-		<section class="slider slider--about">
-			<div class="slide">
-				<div class="slide__image-wrapper">
-					<img src="img/wood-bg.png" alt="slide" class="slide__image">
-				</div>
-
-				<div class="slide__content-wrapper">
-
-					<section class="registration registration--slide">
-						<div class="registration__wrapper">
-
-							<div class="registration-bonus">
-								<h3 class="registration-bonus__header">Зарегистрируйся и получи</h3>
-								<h3 class="registration-bonus__underheader">Приветственный бонус</h3>	
-								<span class="registration-bonus__count anim">1800$</span>
-							</div>
-
-							<div class="registration__character-wrapper">
-								<img src="img/tiger.png" alt="toger" class="registration__character">
-							</div>
-
-							<form action="#" class="registration-form-mini registration-form-mini--slide">
-								<input type="email" placeholder="Email" class="registration-form-mini__email">
-								<input type="text" placeholder="Никнейм" class="registration-form-mini__nickname">
-								<input type="password" placeholder="Пароль" class="registration-form-mini__password">
-								<input type="password" placeholder="Подтверждение пароля" class="registration-form-mini__password-confirm">
-								<select name="" id="bottom-reg-select" class="registration-form-mini__select">
-									<option value="currency" selected disabled>Валюта</option>
-									<option value="rub">Рубли</option>
-									<option value="euro">Евро</option>
-									<option value="dollar">Доллары</option>
-									<option value="btc">Биткоины</option>
-								</select>
-
-								<input type="checkbox" id="bottom-form-checkbox" class="registration-form-mini__checkbox">
-								<label for="bottom-form-checkbox" class="registration-form-mini__label-checkbox">Мне 18 лет и я принимаю Положения и условия</label>
-
-								<input type="submit" class="registration-form-mini__button" value="Регистрация">
-							</form>
-
-							<button class="registration__reg-button">Регистрация</button>
-
-						</div>
-					</section>
-				</div>
-			</div>
-
+		<section class="slider">
 			<div class="slide">
 				<div class="slide__image-wrapper">
 					<img src="img/slide-image-2.png" alt="slide" class="slide__image">
@@ -242,6 +200,52 @@
 					<a href="day-slot.html" class="slide__button slide__button--centered">Подробнее</a>
 				</div>
 			</div> 
+
+			<div class="slide">
+				<div class="slide__image-wrapper">
+					<img src="img/wood-bg.png" alt="slide" class="slide__image">
+				</div>
+
+				<div class="slide__content-wrapper">
+
+					<section class="registration registration--slide">
+						<div class="registration__wrapper">
+
+							<div class="registration-bonus">
+								<h3 class="registration-bonus__header">Зарегистрируйся и получи</h3>
+								<h3 class="registration-bonus__underheader">Приветственный бонус</h3>	
+								<span class="registration-bonus__count">1800$</span>
+							</div>
+
+							<div class="registration__character-wrapper">
+								<img src="img/tiger.png" alt="toger" class="registration__character">
+							</div>
+
+							<form action="#" class="registration-form-mini registration-form-mini--slide">
+								<input type="email" placeholder="Email" class="registration-form-mini__email">
+								<input type="text" placeholder="Никнейм" class="registration-form-mini__nickname">
+								<input type="password" placeholder="Пароль" class="registration-form-mini__password">
+								<input type="password" placeholder="Подтверждение пароля" class="registration-form-mini__password-confirm">
+								<select name="" id="bottom-reg-select" class="registration-form-mini__select">
+									<option value="currency" selected disabled>Валюта</option>
+									<option value="rub">Рубли</option>
+									<option value="euro">Евро</option>
+									<option value="dollar">Доллары</option>
+									<option value="btc">Биткоины</option>
+								</select>
+
+								<input type="checkbox" id="bottom-form-checkbox" class="registration-form-mini__checkbox">
+								<label for="bottom-form-checkbox" class="registration-form-mini__label-checkbox">Мне 18 лет и я принимаю Положения и условия</label>
+
+								<input type="submit" class="registration-form-mini__button" value="Регистрация">
+							</form>
+
+							<button class="registration__reg-button">Регистрация</button>
+
+						</div>
+					</section>
+				</div>
+			</div>
 
 			<div class="slide">
 				<div class="slide__image-wrapper">
@@ -559,10 +563,6 @@
 	<script type="text/javascript">
 		$('select').styler();
 	</script>
-
-	<script type="text/javascript" src="js/jquery.viewportchecker.min.js"></script>
-
-	<script type="text/javascript" src="js/animation-delay.js"></script>
 
 </body>
 </html>
