--- a/bonus.html
+++ b/bonus.html
@@ -51,7 +51,7 @@
 
 						<ul class="main-nav__dropdown">
 							<li class="main-nav__dropdown-item"><a href="bonus.html">Приветственный бонус</a></li>
-							<li class="main-nav__dropdown-item"><a href="#">Reload бонус</a></li>
+							<li class="main-nav__dropdown-item"><a href="reload-bonus.html">Reload бонус</a></li>
 							<li class="main-nav__dropdown-item"><a href="everyweek-cashback.html">100% кэшбек</a></li>
 							<li class="main-nav__dropdown-item"><a href="day-slot.html">Слот дня во вторник</a></li>
 							<li class="main-nav__dropdown-item"><a href="free-spins.html">Фриспины в четверг</a></li>
@@ -110,18 +110,18 @@
 					<button class="greeting-bonus__button">Получить!</button>
 				</div>
 
-				<div class="deposit-condition">
-					<span class="deposit-condition__count">500 руб</span>
-					<span class="deposit-condition__description">Минимальный депозит</span>
+				<div class="condition">
+					<span class="condition__count">500 руб</span>
+					<span class="condition__description">Минимальный депозит</span>
 				</div>
 
-				<div class="deposit-condition">
-					<span class="deposit-condition__count">35 000 руб</span>
-					<span class="deposit-condition__description">Максимальный размер бонуса</span>
+				<div class="condition">
+					<span class="condition__count">35 000 руб</span>
+					<span class="condition__description">Максимальный размер бонуса</span>
 				</div>
 
-				<div class="deposit-condition">
-					<span class="deposit-condition__description">Вы так же можете отказаться от бонусов в личном кабинете</span>
+				<div class="condition">
+					<span class="condition__description">Вы так же можете отказаться от бонусов в личном кабинете</span>
 				</div>
 			</div>
 		</section>
@@ -142,16 +142,16 @@
 		<section class="bonus-more">
 			<div class="bonus-more__wrapper">
 
-				<div class="deposit-condition">
-					<span class="deposit-condition__description">Отыгрывать бонус можно только в слотах.</span>
+				<div class="condition">
+					<span class="condition__description">Отыгрывать бонус можно только в слотах.</span>
 				</div>
 
-				<div class="deposit-condition">
-					<span class="deposit-condition__description">Максимальная ставка при это не должна превышать 5$(300р.)</span>
+				<div class="condition">
+					<span class="condition__description">Максимальная ставка при это не должна превышать 5$(300р.)</span>
 				</div>
 
-				<div class="deposit-condition">
-					<span class="deposit-condition__description">Требования по отыгрышу бонусов(вейджер) х40</span>
+				<div class="condition">
+					<span class="condition__description">Требования по отыгрышу бонусов(вейджер) х40</span>
 				</div>
 
 				<p class="bonus-more__text">Так же к этому предложению действуют стандартные положения и условия </p>
