--- a/bonus.html
+++ b/bonus.html
@@ -67,6 +67,7 @@
 							<li class="main-nav__dropdown-item"><a href="about.html">О DarkSlot</a></li>
 							<li class="main-nav__dropdown-item"><a href="blog.html">Блог</a></li>
 							<li class="main-nav__dropdown-item"><a href="#">Правила и условия</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Политика конфиденциальности</a></li>
 						</ul>
 
 					</li>
@@ -227,7 +228,7 @@
 			<div class="footer__wrapper">
 				<div class="footer__copyright"></div>
 				<div class="footer__development">
-					<span class="footer__developer">Дизайн сайта: </span> 
+					<span class="footer__developer">Разработка сайта: </span> 
 					<a href="http://www.crepla.com/" target="blank"><img src="img/crepla-logo.png" alt="crepla" class="footer__crepla-logo"></a>
 				</div>
 			</div>
