--- a/reload-bonus.html
+++ b/reload-bonus.html
@@ -67,6 +67,7 @@
 							<li class="main-nav__dropdown-item"><a href="about.html">О DarkSlot</a></li>
 							<li class="main-nav__dropdown-item"><a href="blog.html">Блог</a></li>
 							<li class="main-nav__dropdown-item"><a href="#">Правила и условия</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Политика конфиденциальности</a></li>
 						</ul>
 
 					</li>
@@ -91,24 +92,35 @@
 
 				<div class="levels">
 					<div class="level">
-						<span class="level__up-text">до</span>
-						<span class="level__money-amount">50$</span>
-						<span class="level__description">1 уровень</span>
+						<div class="level__text-wrapper">
+							<span class="level__up-text">до</span>
+							<span class="level__money-amount">50$</span>
+							<span class="level__description">1 уровень</span>
+						</div>
 					</div>
 					<div class="level">
-						<span class="level__up-text">до</span>
-						<span class="level__money-amount">100$</span>
-						<span class="level__description">2 уровень</span>
+						<div class="level__text-wrapper">
+							<span class="level__up-text">до</span>
+							<span class="level__money-amount">100$</span>
+							<span class="level__description">2 уровень</span>
+						</div>
 					</div>
 					<div class="level">
-						<span class="level__up-text">до</span>
-						<span class="level__money-amount">200$</span>
-						<span class="level__description">3 уровень</span>
+						<div class="level__text-wrapper">
+							<span class="level__up-text">до</span>
+							<span class="level__money-amount">200$</span>
+							<span class="level__description">3 уровень</span>
+						</div>
 					</div>
 					<div class="level">
-						<span class="level__up-text">до</span>
-						<span class="level__money-amount">2000$</span>
-						<span class="level__description">Dark lord	</span>
+						<div class="level__text-wrapper">
+							<span class="level__up-text">до</span>
+							<span class="level__money-amount">2000$</span>
+							<span class="level__description">Dark lord</span>
+							<div class="level__image-wrapper">
+								<img src="img/knight.png" alt="knight" condition="level__image">
+							</div>
+						</div>
 					</div>
 				</div>
 				
@@ -324,7 +336,7 @@
 			<div class="footer__wrapper">
 				<div class="footer__copyright"></div>
 				<div class="footer__development">
-					<span class="footer__developer">Дизайн сайта: </span> 
+					<span class="footer__developer">Разработка сайта: </span> 
 					<a href="http://www.crepla.com/" target="blank"><img src="img/crepla-logo.png" alt="crepla" class="footer__crepla-logo"></a>
 				</div>
 			</div>
