--- a/free-spins.html
+++ b/free-spins.html
@@ -67,6 +67,7 @@
 							<li class="main-nav__dropdown-item"><a href="about.html">О DarkSlot</a></li>
 							<li class="main-nav__dropdown-item"><a href="blog.html">Блог</a></li>
 							<li class="main-nav__dropdown-item"><a href="#">Правила и условия</a></li>
+							<li class="main-nav__dropdown-item"><a href="#">Политика конфиденциальности</a></li>
 						</ul>
 
 					</li>
@@ -127,7 +128,7 @@
 				</div>
 
 				<div class="statistics__text-wrapper">
-					<p class="statistics__text">Данное бонусное предложение доступно только для клиентов  "DARK SLOT".<br>Акция проводится по (День недели) с 01:00 до 23:59 (МСК).<br>Для  участия в акции, необходимо пополнить счет не менее чем на 20$, фри спины будут начислены на счет моментально.<br>Каждый игрок Darkslot может принять участие в акции только один раз на протяжении четверга.<br>Бонус доступен только для одного игрового счета, человека, семью, компьютер или IP-адрес. При подозрении о нарушениях путем множественных регистраций (поддельные счета) все бонусные средства и реальные будут аннулированы.<br>Принимая бонус, клиент соглашается с бонусными условиями, а также с общими правилами и положениями "DARK SLOT", опубликованными на сайте Darkslot.com .</p>
+					<p class="statistics__text">Данное бонусное предложение доступно только для клиентов  "DARK SLOT". Акция проводится по (День недели) с 01:00 до 23:59 (МСК). Для  участия в акции, необходимо пополнить счет не менее чем на 20$, фри спины будут начислены на счет моментально. Каждый игрок Darkslot может принять участие в акции только один раз на протяжении четверга. Бонус доступен только для одного игрового счета, человека, семью, компьютер или IP-адрес. При подозрении о нарушениях путем множественных регистраций (поддельные счета) все бонусные средства и реальные будут аннулированы. Принимая бонус, клиент соглашается с бонусными условиями, а также с общими правилами и положениями "DARK SLOT", опубликованными на сайте Darkslot.com .</p>
 				</div>
 			</div>
 		</section>
@@ -233,7 +234,7 @@
 			<div class="footer__wrapper">
 				<div class="footer__copyright"></div>
 				<div class="footer__development">
-					<span class="footer__developer">Дизайн сайта: </span> 
+					<span class="footer__developer">Разработка сайта: </span> 
 					<a href="http://www.crepla.com/" target="blank"><img src="img/crepla-logo.png" alt="crepla" class="footer__crepla-logo"></a>
 				</div>
 			</div>
