beginning for level-up modals

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 			<div class="slide">
 				<div class="slide__image-wrapper">
 					<a href="day-slot.html">
-						<img src="img/day-slot.png" alt="slide" class="slide__image">
+						<img src="img/day-slot.jpg" alt="slide" class="slide__image">
 					</a>
 				</div>
 
@@ -336,6 +336,14 @@
 				<div class="jackpot__image-wrapper">
 					<img src="img/viking.png" alt="Викинг" class="jackpot__image">
 				</div>
+			</div>
+		</section>
+
+		<section class="buttons-level">
+			<div class="buttons-level__wrapper">
+				<button class="buttons-level__button" id="button1">2 уровень</button>
+				<button class="buttons-level__button" id="button2">3 уровень</button>
+				<button class="buttons-level__button" id="button3">4 уровень</button>
 			</div>
 		</section>
 
@@ -682,6 +690,36 @@
 	</section>
 
 	<div class="modal-bg"></div> 
+
+	<section class="level-modal level-modal--second">
+		<div class="level-modal__wrapper">
+			<div class="level-modal__header-wrapper">
+				<span class="level-modal__number">2</span>
+				<h3 class="level-modal__greeting">Поздравляем, вы получили</h3>
+				<h4 class="level-modal__level">Уровень</h4>
+			</div>
+			<span class="level-modal__up-text">Вам доступно</span>
+
+			<div class="level-modal__ability-wrapper">
+				<div class="level-ability">
+					<div class="level-ability__header">Слот дня</div>
+					<p class="level-ability__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+				</div>
+				<div class="level-ability">
+					<div class="level-ability__header">100% кешбек</div>
+					<p class="level-ability__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+				</div>
+				<div class="level-ability">
+					<div class="level-ability__header">Коефицент 1:40</div>
+					<p class="level-ability__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="level-modal__close"></div>
+	</section>
+
+	<div class="level-modal-bg"></div>
 
 	<div id="preloader"></div>
 
