level up modals

--- a/index.html
+++ b/index.html
@@ -689,16 +689,19 @@
 		<div class="modal__close"></div>
 	</section>
 
-	<div class="modal-bg"></div> 
+	<div class="modal-bg"></div>
 
 	<section class="level-modal level-modal--second">
 		<div class="level-modal__wrapper">
 			<div class="level-modal__header-wrapper">
 				<span class="level-modal__number">2</span>
-				<h3 class="level-modal__greeting">Поздравляем, вы получили</h3>
-				<h4 class="level-modal__level">Уровень</h4>
+
+				<div class="level-modal__greeting-wrapper">
+					<h3 class="level-modal__greeting">Поздравляем, вы получили</h3>
+					<h4 class="level-modal__level">Уровень</h4>
+				</div>
 			</div>
-			<span class="level-modal__up-text">Вам доступно</span>
+			<span class="level-modal__up-text">Вам доступно:</span>
 
 			<div class="level-modal__ability-wrapper">
 				<div class="level-ability">
@@ -712,6 +715,74 @@
 				<div class="level-ability">
 					<div class="level-ability__header">Коефицент 1:40</div>
 					<p class="level-ability__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="level-modal__close"></div>
+	</section>
+
+	<section class="level-modal level-modal--third">
+		<div class="level-modal__wrapper">
+			<div class="level-modal__header-wrapper">
+				<span class="level-modal__number">3</span>
+
+				<div class="level-modal__greeting-wrapper">
+					<h3 class="level-modal__greeting">Поздравляем, вы получили</h3>
+					<h4 class="level-modal__level">Уровень</h4>
+				</div>
+			</div>
+			<span class="level-modal__up-text">Вам доступно:</span>
+
+			<div class="level-modal__ability-wrapper">
+				<div class="level-ability">
+					<div class="level-ability__header">200$</div>
+					<p class="level-ability__text">бесдепозитный бонус 200$ единоразово</p>
+				</div>
+				<div class="level-ability">
+					<div class="level-ability__header">Приоритет</div>
+					<p class="level-ability__text">приоритетность в службе поддержки</p>
+				</div>
+				<div class="level-ability">
+					<div class="level-ability__header">Коефицент 1:20</div>
+					<p class="level-ability__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="level-modal__close"></div>
+	</section>
+
+	<section class="level-modal level-modal--fourth">
+		<div class="level-modal__wrapper">
+			<div class="level-modal__header-wrapper">
+				<span class="level-modal__number"><img src="img/knight-with-hair.png" alt=""></span>
+
+				<div class="level-modal__greeting-wrapper">
+					<h3 class="level-modal__greeting">Поздравляем, вы получили</h3>
+					<h4 class="level-modal__level">Уровень</h4>
+				</div>
+			</div>
+			<span class="level-modal__up-text">Вам доступно:</span>
+
+			<div class="level-modal__ability-wrapper">
+				<div class="level-ability level-ability--fourth">
+					<div class="level-ability__header">Дарим iPhone 7</div>
+					<p class="level-ability__text">либо цену на счёт без отыгрыша</p>
+				</div>
+				<div class="level-ability level-ability--fourth">
+					<div class="level-ability__header">2000$</div>
+					<p class="level-ability__text">бездепозит с Вейджером X40</p>
+				</div>
+
+				<div class="level-ability">
+					<div class="level-ability__header">Личный менеджер</div>
+				</div>
+				<div class="level-ability">
+					<div class="level-ability__header">релоад 50% до 2000$</div>
+				</div>
+				<div class="level-ability">
+					<div class="level-ability__header">вывод не ограниченный</div>
 				</div>
 			</div>
 		</div>
