prepearing for tournament page

--- a/everyweek-cashback.html
+++ b/everyweek-cashback.html
@@ -55,7 +55,7 @@
 							<li class="main-nav__dropdown-item"><a href="everyweek-cashback.html">100% кэшбек</a></li>
 							<li class="main-nav__dropdown-item"><a href="day-slot.html">Слот дня во вторник</a></li>
 							<li class="main-nav__dropdown-item"><a href="free-spins.html">Фриспины в четверг</a></li>
-							<li class="main-nav__dropdown-item"><a href="#">Darkslot турнир</a></li>
+							<li class="main-nav__dropdown-item"><a href="tournament.html">Darkslot турнир</a></li>
 						</ul>
 					</li>
 
@@ -235,7 +235,7 @@
 							<li class="games__item"><a href="everyweek-cashback.html">100% Кэшбек</a></li>
 							<li class="games__item"><a href="day-slot.html">Слот дня во вторник</a></li>
 							<li class="games__item"><a href="free-spins.html">Фриспины в четверг</a></li>
-							<li class="games__item"><a href="#">Darkslot турнир</a></li>
+							<li class="games__item"><a href="tournament.html">Darkslot турнир</a></li>
 						</ul>
 					</div>
 
