html for tournament

--- a/day-slot.html
+++ b/day-slot.html
@@ -84,7 +84,7 @@
 	<div class="main-wrapper">
 
 		<div class="day-slot-image">
-			<img src="img/day-slot.png" alt="slot of day" class="day-slot-image__inner">
+			<img src="img/day-slot.jpg" alt="slot of day" class="day-slot-image__inner">
 		</div>
 
 		<section class="day-slot">
