--- a/reload-bonus.html
+++ b/reload-bonus.html
@@ -204,7 +204,7 @@
 			<div class="slide">
 				<div class="slide__image-wrapper">
 					<a href="day-slot.html">
-						<img src="img/day-slot.png" alt="slide" class="slide__image">
+						<img src="img/day-slot.jpg" alt="slide" class="slide__image">
 					</a>
 				</div>
 
