--- a/tournament.html
+++ b/tournament.html
@@ -83,6 +83,120 @@
 
 	<div class="main-wrapper">
 
+		<section class="tournament">
+			<div class="tournament__wrapper">
+				<h1 class="tournament__header">Турнир <span>1000$</span> каждую пятницу</h1>
+
+				<p class="tournament__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+
+				<div class="conditions">
+					<div class="conditions__wrapper">
+
+						<div class="condition">
+							<span class="condition__count">500 руб</span>
+							<span class="condition__description">Минимальный депозит</span>
+						</div>
+
+						<div class="condition">
+							<span class="condition__count">35 000 руб</span>
+							<span class="condition__description">Максимальный размер бонуса</span>
+						</div>
+
+						<div class="condition">
+							<span class="condition__description">Вы так же можете отказаться от бонусов в личном кабинете</span>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="tables">
+			<div class="tables__wrapper">
+				<h3 class="tables__header">Места распределяются согласно таблице</h3>
+
+				<div class="prizes-table">
+					<ul class="prizes-table__column">
+						<li class="prizes-table__item">
+							<div class="prizes-table__place">1 место</div>
+							<div class="prizes-table__amount">300$</div>
+						</li>
+						<li class="prizes-table__item">
+							<div class="prizes-table__place">2 место</div>
+							<div class="prizes-table__amount">150$</div>
+						</li>
+						<li class="prizes-table__item">
+							<div class="prizes-table__place">3 место</div>
+							<div class="prizes-table__amount">100$</div>
+						</li>
+					</ul>
+					<ul class="prizes-table__column">
+						<li class="prizes-table__item">
+							<div class="prizes-table__place">4 место</div>
+							<div class="prizes-table__amount">300$</div>
+						</li>
+						<li class="prizes-table__item">
+							<div class="prizes-table__place">5-9 место</div>
+							<div class="prizes-table__amount">150$</div>
+						</li>
+						<li class="prizes-table__item">
+							<div class="prizes-table__place">10-30 место</div>
+							<div class="prizes-table__amount">100$</div>
+						</li>
+					</ul>
+				</div>
+
+				<div class="tables__condition-wrapper">
+					<p class="tables__condition">Все выигрыши требуют отыгрыша х3 , кроме первого места . Первое место не требует отыгрыша</p>
+				</div>
+
+				<div class="places-table">
+					<h2 class="places-table__header">Таблица <span>победителей</span></h2>
+
+					<table>
+						<tr>
+							<td>1</td>
+							<td>100 000$</td>
+							<td>nickname</td>
+							<td>77777.7</td>
+						</tr>
+						<tr>
+							<td>1</td>
+							<td>100 000$</td>
+							<td>nickname</td>
+							<td>77777.7</td>
+						</tr>
+						<tr>
+							<td>1</td>
+							<td>100 000$</td>
+							<td>nickname</td>
+							<td>77777.7</td>
+						</tr>
+					</table>
+
+					<table>
+						<tr>
+							<td>1</td>
+							<td>100 000$</td>
+							<td>nickname</td>
+							<td>77777.7</td>
+						</tr>
+						<tr>
+							<td>1</td>
+							<td>100 000$</td>
+							<td>nickname</td>
+							<td>77777.7</td>
+						</tr>
+						<tr>
+							<td>1</td>
+							<td>100 000$</td>
+							<td>nickname</td>
+							<td>77777.7</td>
+						</tr>
+					</table>
+				</div>
+			</div>
+		</section>
+
 		<section class="slider">
 			<div class="slide">
 				<div class="slide__image-wrapper">
